@@ -12,7 +12,7 @@
         {% search_other %}
 
         {% if pages.object_list.supports_facet %}
-            <nav class="listing-filter" role="navigation">
+            <nav class="listing-filter">
                 <h3 class="filter-title">{% trans "Page types" %}</h3>
                 <ul class="filter-options">
                     {% if not selected_content_type %}
